# workmux

./: .gitignore  .workmux.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: docs.yml  release.yml  sandbox-image.yml
docker/: Dockerfile.base  Dockerfile.claude  Dockerfile.codex  Dockerfile.gemini  Dockerfile.opencode
docs/: index.md  stars.data.ts
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: configuration.md  dashboard.md  git-worktree-caveats.md  index.md  kitty.md  monorepos.md  quick-start.md  sandbox.md  session-mode.md  skills.md  status-popup.md  status-tracking.md  wezterm.md  workflows.md
docs/guide/dashboard/: index.md
docs/guide/sandbox/: container.md  features.md  index.md  lima.md
docs/reference/commands/: add.md  close.md  dashboard.md  index.md  list.md  merge.md  open.md  remove.md  sandbox.md  status.md
scripts/: update_changelog.py
skills/coordinator/: SKILL.md
skills/merge/: SKILL.md
skills/rebase/: SKILL.md
skills/worktree/: SKILL.md
src/: cli.rs  cmd.rs  config.rs  git.rs  logger.rs  main.rs  prompt.rs  shell.rs  spinner.rs  template.rs  tmux.rs  workflow.rs
src/agent_setup/: claude.rs  mod.rs  opencode.rs
src/command/: add.rs  args.rs  capture.rs  close.rs  dashboard.rs  exec.rs  last_done.rs  list.rs  merge.rs  mod.rs  open.rs  path.rs  remove.rs  run.rs  sandbox.rs  sandbox_run.rs  send.rs  set_base.rs  set_window_status.rs  setup.rs  status.rs  wait.rs
src/command/dashboard/: actions.rs  app.rs  diff_ops.rs  keymap.rs  mod.rs  monitor.rs  ui.rs
src/git/: worktree.rs
src/multiplexer/: handle.rs  handshake.rs  kitty.rs  mod.rs  tmux.rs  types.rs  util.rs  wezterm.rs
src/sandbox/: container.rs  freshness.rs  guest.rs  host_exec_sandbox.rs  mod.rs  network_proxy.rs  rpc.rs  shims.rs
src/state/: mod.rs
src/vcs/: git.rs  jj.rs  mod.rs
src/workflow/: agent_resolve.rs  cleanup.rs  context.rs  create.rs  list.rs  merge.rs  mod.rs  open.rs  remove.rs  setup.rs  types.rs
tests/: conftest.py  test_nested_config.py  test_pre_remove_hooks.py  test_session_navigation.py  test_workmux_add.py  test_workmux_close.py  test_workmux_list.py  test_workmux_merge.py  test_workmux_open.py  test_workmux_setup.py
tests/test_workmux_add/: conftest.py  test_session.py
(+16 files in other folders)
