[package]
name = "workmux"
version = "0.1.2"
edition = "2021"
authors = ["workmux contributors"]
description = "An opinionated workflow tool that orchestrates git worktrees and tmux"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
pathdiff = "0.2"
home = "0.5"
dirs = "5.0"
