[package]
name = "workmux"
version = "0.1.16"
edition = "2024"
authors = ["workmux contributors"]
description = "An opinionated workflow tool that orchestrates git worktrees and tmux"
license = "MIT"
documentation = "https://github.com/raine/workmux#readme"
homepage = "https://github.com/raine/workmux"
repository = "https://github.com/raine/workmux"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
pathdiff = "0.2"
home = "0.5"
fs_extra = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
edit = "0.1"
which = "8.0"
tera = "1.19"

[dev-dependencies]
tempfile = "3.14"
